# startriage

./: .gitignore  README.md  ghtriage  pyproject.toml  snapcraft.yaml
.github/workflows/: ci.yaml
startriage/: __init__.py  __main__.py  cli.py  config.py  dates.py  enums.py  log.py  output.py  savebugs.py  source.py  spinner.py  triage.py
startriage/data/: defaults.toml
startriage/sources/discourse/: __init__.py  finder.py  models.py  triage.py
startriage/sources/github/: finder.py  models.py  triage.py
startriage/sources/launchpad/: finder.py  models.py  triage.py
startriage/sources/proposed/: finder.py  models.py  triage.py
tests/: test_config.py  test_dates.py  test_discourse.py
